# mcrd

./: .gitignore  .gitmodules  AMCPDevice.cpp  AMCPDevice.hpp  ATEMDevice.cpp  ATEMDevice.hpp  CMakeLists.txt  Config.cpp  Config.hpp  ConfigDevices.hpp  ControllableDevice.cpp  ControllableDevice.hpp  DateSerialization.cpp  DateSerialization.hpp  Dispatcher.cpp  Dispatcher.hpp  HTTPGetter.cpp  Main.cpp  Makefile  README  Schedule.cpp  Schedule.hpp  ScheduleEntry.cpp  ScheduleEntry.hpp  ScheduleFetcher.cpp  ScheduleFetcher.hpp  ScheduleMaintainer.cpp  ScheduleMaintainer.hpp  cmake_install.cmake
device/: AMCPDevice.cpp  AMCPDevice.hpp  ATEMDevice.cpp  ATEMDevice.hpp  ConfigDevices.cpp  ConfigDevices.hpp  ControllableDevice.cpp
misc/: DateSerialization.cpp  DateSerialization.hpp  HTTPGetter.cpp  HTTPGetter.hpp
schedule/: Schedule.hpp  ScheduleEntry.cpp  ScheduleEntry.hpp  ScheduleFetcher.cpp  ScheduleFetcher.hpp  ScheduleMaintainer.cpp
workers/: Dispatcher.cpp  Dispatcher.hpp
